Fixes contrast summary and details issues

--- a/style/base.scss
+++ b/style/base.scss
@@ -194,11 +194,11 @@ a {
 }
 
 summary {
-  color: hsl(210, 22%, 49%);
+  color: $blue-grey03;
 }
 
 details {
-  color: hsl(210, 22%, 49%);
+  color: $blue-grey03;
 }
 
 section {
